# THT_Aksantara2024

RSC_THT_1/: CMakeLists.txt
RSC_THT_1/src/: ball.cpp  cam.cpp
src/: hello.cpp
